Bug:7906 overlapping text box and text string has been resolved

--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -2578,7 +2578,7 @@ a:hover.search_button {
 }
 
 .row_celltitles {
-	width:auto;
+	width:95%;
 	height:auto;
 	float:left;
 	color:#333;
